# hls4ml-galapagos

./: .gitignore  README.md
CNN_HLS/: CMakeLists.txt  CNN_bridge.cpp  CNN_test.cpp  hls4ml_config.yml  setup.h
CNN_HLS(CLion)/: CMakeLists.txt
CNN_HLS(CLion)/firmware/: Galapagos_Kernel_1.cpp  Galapagos_Kernel_1.h  Galapagos_Kernel_3.cpp  Galapagos_Kernel_3.h  Galapagos_Kernel_Output.cpp  Kernel_1.cpp  Kernel_1.h  Kernel_2.cpp  Kernel_3.cpp  Kernel_3.h  Parameters_1.h  Parameters_2.h  Parameters_3.h
CNN_HLS(CLion)/firmware/weights/: b10.txt  b14.h  b18.h  b22.h  b22.txt  b25.txt  w10.h  w10.txt  w14.txt  w18.h  w22.h  w22.txt  w25.h  w25.txt  w6.txt
CNN_HLS(Vivado_HLS)/: CNN_bridge.cpp  Galapagos_CNN_test.cpp  Galapagos_CNN_test.h  build_lib.sh  hls4ml_config.yml  keras_model.h5  project.tcl
CNN_HLS(Vivado_HLS)/CNN_prj/: vivado_hls.app
CNN_HLS(Vivado_HLS)/CNN_prj/solution1/: script.tcl  solution1.aps
CNN_HLS(Vivado_HLS)/firmware/: Conversion.h  Galapagos_Kernel_2.cpp  Galapagos_Kernel_2.h  Galapagos_Kernel_Input.cpp  Galapagos_Kernel_Input.h  Galapagos_Kernel_Output.h  Kernel_2.h  defines.h  parameters.h
CNN_HLS(Vivado_HLS)/firmware/weights/: b10.h  b14.txt  b18.txt  b2.h  b2.txt  b25.h  b6.h  b6.txt  w14.h  w18.txt  w2.h  w2.txt  w6.h
CNN_HLS(单文件)/: CNN_test.cpp  keras_model.h5
CNN_HLS(单文件)/CNN_prj/solution1/: script.tcl
CNN_HLS(单文件)/firmware/: CNN.cpp  CNN.h
CNN_HLS(单文件)/firmware/weights/: b10.txt  b14.h  (+7 more)
CNN_HLS(多文件)/: build_lib.sh
CNN_HLS(多文件)/CNN_prj/: vivado_hls.app
CNN_HLS(多文件)/firmware/: CNN.cpp  CNN.h  Kernel_1.cpp  Kernel_1.h  Kernel_2.cpp  Kernel_2.h  Kernel_3.cpp  Kernel_3.h  Parameters_1.h  Parameters_2.h  Parameters_3.h  defines.h  parameters.h
CNN_HLS/CNN_prj/: vivado_hls.app
CNN_HLS/firmware/: CNN.cpp  CNN.h  defines.h  galapagos_bridge.h
CNN_HLS/firmware/libGalapagos/: CMakeLists.txt  Makefile  packet_size.h  test.cpp
CNN_HLS/firmware/nnet_utils/: nnet_helpers.h
CNN_HLS/firmware/weights/: w10.h  w21.h
HLS4ML/: main.py
HLS_Simulation/: CNN_test.cpp  Dataset_Construction.py  README.md  Result_Analysis.py
Network/: CNN.h5  CNN.py  QCNN.py  ResNet-50.py  ResNet.py  read_binary.py
(+9 files in other folders)
